--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Larry Olguin",
   "license": "ISC",
   "dependencies": {
-    "@mailchimp/mailchimp_marketing": "^3.0.78",
     "body-parser": "^1.20.0",
-    "express": "^4.18.1",
-    "request": "^2.88.2"
+    "express": "^4.18.1"
   }
 }
